// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for the GET feeddocuments API Returns 200 on successful retrieval of compressed feed document 1`] = `
{
  "data": {
    "content": "Report",
    "contentType": "application/json",
  },
  "debugContext": [
    {
      "apiDocumentationLink": "https://developer-docs.amazon.com/sp-api/docs/feeds-api-v2021-06-30-reference#get-feeds2021-06-30documentsfeeddocumentid",
      "apiName": "GetFeedDocument",
      "request": {
        "feedDocumentId": [
          "amzn1.tortuga.3.ed4cd0d8-447b-4c22-96b5-52da8ace1207.T3YUVYPGKE9BMY",
        ],
      },
      "response": {
        "compressionAlgorithm": "GZIP",
        "feedDocumentId": "amzn1.tortuga.3.ed4cd0d8-447b-4c22-96b5-52da8ace1207.T3YUVYPGKE9BMY",
        "url": "https://tortuga-prod-na.s3.amazonaws.com",
      },
    },
  ],
}
`;

exports[`Test for the GET feeddocuments API Returns 200 on successful retrieval of uncompressed feed document 1`] = `
{
  "data": {
    "content": "Report",
    "contentType": "application/json",
  },
  "debugContext": [
    {
      "apiDocumentationLink": "https://developer-docs.amazon.com/sp-api/docs/feeds-api-v2021-06-30-reference#get-feeds2021-06-30documentsfeeddocumentid",
      "apiName": "GetFeedDocument",
      "request": {
        "feedDocumentId": [
          "amzn1.tortuga.3.ed4cd0d8-447b-4c22-96b5-52da8ace1207.T3YUVYPGKE9BMY",
        ],
      },
      "response": {
        "feedDocumentId": "amzn1.tortuga.3.ed4cd0d8-447b-4c22-96b5-52da8ace1207.T3YUVYPGKE9BMY",
        "url": "https://tortuga-prod-na.s3.amazonaws.com",
      },
    },
  ],
}
`;

exports[`Test for the GET feeddocuments API Returns 500 on feed document content fetch failure 1`] = `
{
  "debugContext": [
    {
      "apiDocumentationLink": "https://developer-docs.amazon.com/sp-api/docs/feeds-api-v2021-06-30-reference#get-feeds2021-06-30documentsfeeddocumentid",
      "apiName": "GetFeedDocument",
      "request": {
        "feedDocumentId": [
          "amzn1.tortuga.3.ed4cd0d8-447b-4c22-96b5-52da8ace1207.T3YUVYPGKE9BMY",
        ],
      },
      "response": {
        "feedDocumentId": "amzn1.tortuga.3.ed4cd0d8-447b-4c22-96b5-52da8ace1207.T3YUVYPGKE9BMY",
        "url": "https://tortuga-prod-na.s3.amazonaws.com",
      },
    },
  ],
}
`;

exports[`Test for the GET feeddocuments API returns 404 on failure making call to the GetFeedDocument API 1`] = `
{
  "debugContext": [
    {
      "apiDocumentationLink": "https://developer-docs.amazon.com/sp-api/docs/feeds-api-v2021-06-30-reference#get-feeds2021-06-30documentsfeeddocumentid",
      "apiName": "GetFeedDocument",
      "request": {
        "feedDocumentId": [
          "amzn1.tortuga.3.ed4cd0d8-447b-4c22-96b5-52da8ace1207.T3YUVYPGKE9BMY",
        ],
      },
      "response": {
        "status": 404,
      },
    },
  ],
}
`;
